--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mfaizmohamad.github.io/animation3d/",
+  "homepage": "http://mfaizmohamad.github.io/",
   "name": "animation3d",
   "private": true,
   "version": "0.0.0",
